<resources>
    <string name="app_name">RoadSigns</string>
    <string name="signDescription">Road Sign</string>
    <string name="questionsCount">Question</string>
    <string name="correctCount">Correct:</string>
    <string name="wrongCount">Wrong:</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="correctFeedback">Correct</string>
    <string name="wrongFeedback">Incorrect</string>

    <string name="completionMsg">Road Signs Quiz Completed</string>
    <string name="Home">HOME</string>
    <string name="title_activity_home">Home</string>

    <string name="signs">Signs</string>
    <string name="road">Road</string>
    <string name="quiz">Quiz</string>
    <string name="number_of_questions">How many question would you like?</string>
    <string name="start">Start</string>
    <string name="defaultQuestionCount">5</string>
</resources>